--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,8 @@
     <color name="secondaryDarkColor">#cacc5d</color>
     <color name="primaryTextColor">@color/white</color>
     <color name="secondaryTextColor">@color/black</color>
-    <color name="colorIcon">@color/black</color>
+
+    <color name="colorIcon">@color/white</color>
 
     <color name="black">@android:color/black</color>
     <color name="white">@android:color/white</color>
