--- a/app/src/main/res/layout/item_board_game.xml
+++ b/app/src/main/res/layout/item_board_game.xml
@@ -9,7 +9,7 @@
             type="com.zebannikolay.capstone.domain.models.BoardGamePreview"/>
         <variable
             name="handler"
-            type="com.zebannikolay.capstone.BoardGamesPreviewRecyclerViewAdapter"/>
+            type="com.zebannikolay.capstone.core.adapters.BoardGamesPreviewRecyclerViewAdapter"/>
     </data>
 
     <android.support.v7.widget.CardView
