--- a/app/src/main/res/layout/item_board_game.xml
+++ b/app/src/main/res/layout/item_board_game.xml
@@ -5,16 +5,18 @@
 
     <data>
         <variable
-            name="game"
+            name="data"
             type="com.zebannikolay.capstone.domain.models.BoardGamePreview"/>
         <variable
             name="handler"
-            type="com.zebannikolay.capstone.core.adapters.BoardGamesPreviewRecyclerViewAdapter"/>
+            type="com.zebannikolay.capstone.core.adapters.UniversalRecyclerAdapter.OnItemClickListener"/>
     </data>
 
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:onClick="@{() -> handler.onClick(data)}">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="wrap_content"
@@ -47,6 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/spacing_normal"
+                android:text="@{data.title}"
                 android:textAppearance="@style/AppTheme.TextAppearance.Title"
                 app:layout_constraintBottom_toBottomOf="@+id/view"
                 app:layout_constraintStart_toStartOf="@+id/view"
