--- a/app/src/main/res/layout/fragment_games_list.xml
+++ b/app/src/main/res/layout/fragment_games_list.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:name="com.zebannikolay.capstone.GamesListFragment"
+    tools:context=".GamesListFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
-        android:name="com.zebannikolay.capstone.GamesListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginEnd="@dimen/horizontal_margin"
-        android:layout_marginStart="@dimen/horizontal_margin"
+        android:padding="@dimen/horizontal_margin"
         app:layoutManager="android.support.v7.widget.StaggeredGridLayoutManager"
-        tools:context=".GamesListFragment"
         tools:listitem="@layout/item_board_game" />
 
 </layout>
