--- a/app/src/main/res/values/styles_text.xml
+++ b/app/src/main/res/values/styles_text.xml
@@ -6,8 +6,21 @@
     </style>
 
     <style name="AppTheme.TextAppearance.Title">
-        <item name="android:textColor">@color/primaryTextColor</item>
+        <item name="android:textColor">@color/primaryDarkColor</item>
         <item name="android:textSize">@dimen/font_large</item>
+    </style>
+
+    <style name="AppTheme.TextAppearance.H5">
+        <item name="android:textColor">@color/primaryDarkColor</item>
+        <item name="android:textSize">@dimen/font_larger</item>
+        <item name="android:letterSpacing">0</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+    </style>
+
+    <style name="AppTheme.TextAppearance.H6">
+        <item name="android:textColor">@color/primaryDarkColor</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:letterSpacing">0.15</item>
     </style>
 
 
