--- a/app/src/main/res/layout/fragment_games_list.xml
+++ b/app/src/main/res/layout/fragment_games_list.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:name="com.zebannikolay.capstone.GamesListFragment"
-    tools:context=".GamesListFragment">
+    tools:context=".presentation.GamesListFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
