--- a/app/src/main/res/layout/activity_game_detail.xml
+++ b/app/src/main/res/layout/activity_game_detail.xml
@@ -12,27 +12,25 @@
         <android.support.design.widget.AppBarLayout
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/app_bar_height"
-            android:fitsSystemWindows="true"
+            android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay">
 
             <android.support.design.widget.CollapsingToolbarLayout
                 android:id="@+id/toolbar_layout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
-                app:contentScrim="?attr/colorPrimary"
+                android:layout_height="@dimen/app_bar_height"
+                app:contentScrim="@color/colorPrimary"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:titleEnabled="false"
                 app:toolbarId="@+id/toolbar">
 
                 <ImageView
                     android:id="@+id/image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:imageUrl="@{@string/fake_url}"
                     android:fitsSystemWindows="true"
-                    android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
+                    app:imageUrl="@{@string/fake_url}"
                     app:layout_collapseMode="parallax" />
 
                 <android.support.v7.widget.Toolbar
@@ -40,17 +38,41 @@
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     app:layout_collapseMode="pin"
-                    app:title=""
                     app:popupTheme="@style/AppTheme.PopupOverlay" />
 
             </android.support.design.widget.CollapsingToolbarLayout>
 
-            <TextView
+            <LinearLayout
+                android:id="@+id/title_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/primaryDarkColor"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-                android:text="Bang Bang"/>
+                android:background="?colorPrimary"
+                android:padding="@dimen/spacing_normal"
+                android:orientation="vertical"
+                app:layout_scrollFlags="scroll|enterAlways|snap">
+
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:lines="1"
+                    android:maxLength="20"
+                    android:text="Bang Bang"
+                    android:textAppearance="@style/AppTheme.TextAppearance.H5.Inverse" />
+
+                <TextView
+                    android:id="@+id/genre"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="@dimen/spacing_small"
+                    android:ellipsize="end"
+                    android:lines="1"
+                    android:maxLength="40"
+                    android:text="Very cool board game"
+                    android:textAppearance="@style/AppTheme.TextAppearance.Caption.Inverse" />
+
+            </LinearLayout>
 
         </android.support.design.widget.AppBarLayout>
 
@@ -60,8 +82,8 @@
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:tint="@color/secondaryTextColor"
             android:layout_margin="@dimen/fab_margin"
+            android:tint="@color/secondaryTextColor"
             app:layout_anchor="@id/app_bar"
             app:layout_anchorGravity="bottom|end"
             app:srcCompat="@drawable/ic_favorite" />
