--- a/app/src/main/res/values/styles_text.xml
+++ b/app/src/main/res/values/styles_text.xml
@@ -1,24 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="AppTheme.TextAppearance" >
-        <item name="android:textColor">@color/primaryTextColor</item>
+        <item name="android:textColor">@color/secondaryTextColor</item>
         <item name="android:textSize">@dimen/font_normal</item>
+        <item name="android:fontFamily">sans-serif</item>
+    </style>
+
+
+    <style name="AppTheme.TextAppearance.Caption" >
+        <item name="android:textSize">@dimen/font_small</item>
+        <item name="android:letterSpacing">0.4</item>
+    </style>
+
+    <style name="AppTheme.TextAppearance.Caption.Inverse" >
+        <item name="android:textColor">@color/primaryTextColor</item>
     </style>
 
     <style name="AppTheme.TextAppearance.Title">
-        <item name="android:textColor">@color/primaryDarkColor</item>
         <item name="android:textSize">@dimen/font_large</item>
     </style>
 
     <style name="AppTheme.TextAppearance.H5">
-        <item name="android:textColor">@color/primaryDarkColor</item>
         <item name="android:textSize">@dimen/font_larger</item>
         <item name="android:letterSpacing">0</item>
         <item name="android:fontFamily">sans-serif-medium</item>
     </style>
 
+    <style name="AppTheme.TextAppearance.H5.Inverse">
+        <item name="android:textColor">@color/primaryTextColor</item>
+    </style>
+
     <style name="AppTheme.TextAppearance.H6">
-        <item name="android:textColor">@color/primaryDarkColor</item>
         <item name="android:textSize">20sp</item>
         <item name="android:letterSpacing">0.15</item>
     </style>
