--- a/app/src/main/res/layout/fragment_games_list.xml
+++ b/app/src/main/res/layout/fragment_games_list.xml
@@ -9,6 +9,7 @@
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/background"
         android:padding="@dimen/horizontal_margin"
         app:layoutManager="android.support.v7.widget.StaggeredGridLayoutManager"
         tools:listitem="@layout/item_board_game" />
