--- a/app/src/main/res/layout/item_board_game.xml
+++ b/app/src/main/res/layout/item_board_game.xml
@@ -29,7 +29,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:scaleType="centerCrop"
-                app:imageUrl="@{item.url}"
+                app:imageUrl="@{item.imageUrl}"
                 app:layout_constraintDimensionRatio="4:3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
