Add firebase storage and get images

--- a/app/src/main/res/layout/fragment_games_list.xml
+++ b/app/src/main/res/layout/fragment_games_list.xml
@@ -5,13 +5,20 @@
     android:name="com.zebannikolay.capstone.GamesListFragment"
     tools:context=".presentation.GamesListFragment">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/background"
-        android:padding="@dimen/horizontal_margin"
-        app:layoutManager="android.support.v7.widget.StaggeredGridLayoutManager"
-        tools:listitem="@layout/item_board_game" />
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/background"
+            android:padding="@dimen/horizontal_margin"
+            app:layoutManager="android.support.v7.widget.StaggeredGridLayoutManager"
+            tools:listitem="@layout/item_board_game" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </layout>
