--- a/app/src/main/res/layout/item_board_game.xml
+++ b/app/src/main/res/layout/item_board_game.xml
@@ -16,13 +16,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/AppTheme.CardView"
-        android:background="?attr/selectableItemBackground"
-        android:foreground="?attr/selectableItemBackground"
         android:onClick="@{() -> handler.onClick(item)}">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:padding="@dimen/spacing_normal">
 
             <ImageView
                 android:id="@+id/image"
@@ -38,17 +37,19 @@
 
             <TextView
                 android:id="@+id/title"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/spacing_normal"
-                android:layout_marginEnd="106dp"
+                android:layout_marginTop="@dimen/spacing_normal"
+                android:gravity="center"
+                android:lines="2"
                 android:text="@{item.title}"
-                android:textAppearance="@style/AppTheme.TextAppearance.H5"
+                android:textAppearance="@style/AppTheme.TextAppearance.Title"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/favorite_button"
                 app:layout_constraintHorizontal_chainStyle="spread_inside"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/image"
+                app:layout_constraintVertical_bias="0.0"
                 tools:text="Monopoly" />
 
             <ImageButton
