Done details screen

--- a/app/src/main/res/layout/activity_game_detail.xml
+++ b/app/src/main/res/layout/activity_game_detail.xml
@@ -2,7 +2,14 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".presentation.GameDetailActivity">
+    tools:context=".presentation.GameDetailsActivity">
+
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.zebannikolay.capstone.presentation.GameDetailsViewModel" />
+    </data>
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -28,15 +35,16 @@
                     android:id="@+id/image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:contentDescription="@{viewModel.game.title}"
                     android:fitsSystemWindows="true"
                     android:scaleType="centerCrop"
-                    app:imageUrl="@{@string/fake_url}"
+                    app:imageUrl="@{viewModel.game.imageUrl}"
                     app:layout_collapseMode="parallax" />
 
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
+                    android:layout_height="?android:actionBarSize"
                     app:layout_collapseMode="pin"
                     app:popupTheme="@style/AppTheme.PopupOverlay" />
 
@@ -47,8 +55,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?colorPrimary"
-                android:padding="@dimen/spacing_normal"
                 android:orientation="vertical"
+                android:padding="@dimen/spacing_normal"
                 app:layout_scrollFlags="scroll|enterAlways|snap">
 
                 <TextView
@@ -58,35 +66,27 @@
                     android:ellipsize="end"
                     android:lines="1"
                     android:maxLength="20"
-                    android:text="Bang Bang"
+                    android:text="@{viewModel.game.title}"
                     android:textAppearance="@style/AppTheme.TextAppearance.H5.Inverse" />
-
-                <TextView
-                    android:id="@+id/genre"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="@dimen/spacing_small"
-                    android:ellipsize="end"
-                    android:lines="1"
-                    android:maxLength="40"
-                    android:text="Very cool board game"
-                    android:textAppearance="@style/AppTheme.TextAppearance.Caption.Inverse" />
 
             </LinearLayout>
 
         </android.support.design.widget.AppBarLayout>
 
-        <include layout="@layout/content_game_detail" />
+        <include
+            layout="@layout/content_game_detail"
+            app:viewModel="@{viewModel}" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
+            android:onClick="@{() -> viewModel.onFavoriteClick()}"
             android:tint="@color/secondaryTextColor"
             app:layout_anchor="@id/app_bar"
             app:layout_anchorGravity="bottom|end"
-            app:srcCompat="@drawable/ic_favorite" />
+            android:src="@{viewModel.game.isFavorite ? @drawable/ic_favorite : @drawable/ic_favorite_border}" />
 
     </android.support.design.widget.CoordinatorLayout>
 </layout>
