--- a/app/src/main/res/layout/item_board_game.xml
+++ b/app/src/main/res/layout/item_board_game.xml
@@ -29,6 +29,7 @@
                 android:layout_height="0dp"
                 android:scaleType="centerCrop"
                 app:imageUrl="@{item.imageUrl}"
+                android:contentDescription="@{item.title}"
                 app:layout_constraintDimensionRatio="4:3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -40,8 +41,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/spacing_normal"
-                android:gravity="center"
-                android:lines="2"
+                android:gravity="center_vertical"
+                android:maxLines="2"
                 android:text="@{item.title}"
                 android:textAppearance="@style/AppTheme.TextAppearance.Title"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -49,7 +50,6 @@
                 app:layout_constraintHorizontal_chainStyle="spread_inside"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/image"
-                app:layout_constraintVertical_bias="0.0"
                 tools:text="Monopoly" />
 
             <ImageButton
