--- a/app/src/main/res/layout/content_game_detail.xml
+++ b/app/src/main/res/layout/content_game_detail.xml
@@ -45,7 +45,7 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:padding="@dimen/spacing_large"
                             android:text="@string/label_summary"
@@ -74,7 +74,7 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:padding="@dimen/spacing_large"
                             android:text="@string/label_rules"
@@ -107,7 +107,7 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:padding="@dimen/spacing_large"
                             android:text="@string/label_review"
