--- a/app/src/main/res/layout/activity_game_detail.xml
+++ b/app/src/main/res/layout/activity_game_detail.xml
@@ -56,7 +56,10 @@
                 android:layout_height="wrap_content"
                 android:background="?colorPrimary"
                 android:orientation="vertical"
-                android:padding="@dimen/spacing_normal"
+                android:paddingTop="@dimen/spacing_normal"
+                android:paddingBottom="@dimen/spacing_normal"
+                android:paddingStart="@dimen/vertical_margin"
+                android:paddingEnd="@dimen/vertical_margin"
                 app:layout_scrollFlags="scroll|enterAlways|snap">
 
                 <TextView
@@ -81,7 +84,7 @@
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/fab_margin"
+            android:layout_marginEnd="@dimen/vertical_margin"
             android:onClick="@{() -> viewModel.onFavoriteClick()}"
             android:tint="@color/secondaryTextColor"
             app:layout_anchor="@id/app_bar"
